plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()
    // v3.0: every optional integration resolves from its publisher's Maven. A fresh clone no
    // longer depends on ignored, developer-local jars in libs/.
    maven {
        name = "FTB"
        url = "https://maven.ftb.dev/releases"
        content { includeGroup "dev.ftb.mods" }
    }
    maven {
        name = "LatvianModder"
        url = "https://maven.latvian.dev/releases"
        content { includeGroup "dev.latvian.mods" }
    }
    maven {
        name = "Architectury"
        url = "https://maven.architectury.dev"
        content { includeGroup "dev.architectury" }
    }
    maven {
        name = "BlameJared"
        url = "https://maven.blamejared.com"
        content { includeGroup "mezz.jei" }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content { includeGroup "maven.modrinth" }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},minecraft"
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    unitTest {
        testedMod = mods."${mod_id}"
        enable()
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }
sourceSets.test.resources.srcDir 'editor-ui/src/features/stages/fixtures'


dependencies {
    // compile against the exact optional api surface, never load it on common startup.
    compileOnly 'net.luckperms:api:5.4'
    compileOnly "maven.modrinth:emi:1.1.22+1.21.1+neoforge"
    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:19.27.0.340"
    compileOnly "dev.ftb.mods:ftb-library-neoforge:2101.1.30"
    compileOnly "dev.ftb.mods:ftb-teams-neoforge:2101.1.9"
    compileOnly "dev.ftb.mods:ftb-quests-neoforge:2101.1.21"
    compileOnly "dev.latvian.mods:kubejs-neoforge:2101.7.2-build.348"
    compileOnly "maven.modrinth:lootr:1.21.1-1.11.37.118"

    // Jade (optional) — pulled from the Modrinth Maven, NOT libs/. Powers the in-world
    // "🔒 Requires <stage>" overlay (compat/jade). compileOnly: if Jade isn't installed at
    // runtime, Jade never scans our @WailaPlugin, so the plugin class is simply never loaded.
    compileOnly "maven.modrinth:jade:15.10.5+neoforge"

    // WTHIT (optional) — the other "what am I looking at" mod, for overlay parity (compat/wthit).
    // Also from the Modrinth Maven. compileOnly so it's inert when WTHIT isn't installed.
    compileOnly "maven.modrinth:wthit:neo-12.10.2"

    // TOML parser for stage files
    implementation 'com.electronwill.night-config:toml:3.6.7'

    testImplementation platform('org.junit:junit-bom:5.12.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'net.luckperms:api:5.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test) {
    useJUnitPlatform()
    systemProperty 'progressivestages.projectDir', project.projectDir.absolutePath
}

tasks.named('compileJava', JavaCompile) {
    options.compilerArgs.add('-Xlint:deprecation')
}

def buildCommit = providers.exec {
    commandLine 'git', 'rev-parse', 'HEAD'
    ignoreExitValue = true
}.standardOutput.asText.map { it.trim() ?: 'unavailable' }
def buildDirty = providers.exec {
    commandLine 'git', 'status', '--porcelain', '--untracked-files=normal', '--',
        'src/main', 'build.gradle', 'gradle.properties', 'settings.gradle', 'gradle'
    ignoreExitValue = true
}.standardOutput.asText.map { buildCommit.get() == 'unavailable' || !it.trim().isEmpty() }
tasks.named('jar', Jar) {
    inputs.property('buildCommit', buildCommit)
    inputs.property('buildDirty', buildDirty)
    doFirst {
        manifest.attributes('Build-Commit': buildCommit.get(), 'Build-Dirty': buildDirty.get().toString())
    }
}


// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
